docs/0.20/_sources/api/gammapy.maps.Map.rst.txt
Map
===

.. currentmodule:: gammapy.maps

.. autoclass:: Map
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Map.data
      ~Map.geom
      ~Map.is_mask
      ~Map.meta
      ~Map.quantity
      ~Map.tag
      ~Map.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~Map.apply_edisp
      ~Map.coadd
      ~Map.copy
      ~Map.create
      ~Map.crop
      ~Map.cumsum
      ~Map.downsample
      ~Map.fill_by_coord
      ~Map.fill_by_idx
      ~Map.fill_by_pix
      ~Map.fill_events
      ~Map.from_geom
      ~Map.from_hdulist
      ~Map.from_stack
      ~Map.get_by_coord
      ~Map.get_by_idx
      ~Map.get_by_pix
      ~Map.get_image_by_coord
      ~Map.get_image_by_idx
      ~Map.get_image_by_pix
      ~Map.get_spectrum
      ~Map.integral
      ~Map.interp_by_coord
      ~Map.interp_by_pix
      ~Map.interp_to_geom
      ~Map.is_allclose
      ~Map.iter_by_axis
      ~Map.iter_by_image
      ~Map.iter_by_image_data
      ~Map.mask_nearest_position
      ~Map.normalize
      ~Map.pad
      ~Map.plot_grid
      ~Map.plot_interactive
      ~Map.read
      ~Map.reduce
      ~Map.reduce_over_axes
      ~Map.resample
      ~Map.resample_axis
      ~Map.set_by_coord
      ~Map.set_by_idx
      ~Map.set_by_pix
      ~Map.slice_by_idx
      ~Map.split_by_axis
      ~Map.sum_over_axes
      ~Map.to_cube
      ~Map.to_unit
      ~Map.upsample
      ~Map.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom
   .. autoattribute:: is_mask
   .. autoattribute:: meta
   .. autoattribute:: quantity
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: apply_edisp
   .. automethod:: coadd
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: cumsum
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: fill_events
   .. automethod:: from_geom
   .. automethod:: from_hdulist
   .. automethod:: from_stack
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: get_image_by_coord
   .. automethod:: get_image_by_idx
   .. automethod:: get_image_by_pix
   .. automethod:: get_spectrum
   .. automethod:: integral
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: interp_to_geom
   .. automethod:: is_allclose
   .. automethod:: iter_by_axis
   .. automethod:: iter_by_image
   .. automethod:: iter_by_image_data
   .. automethod:: mask_nearest_position
   .. automethod:: normalize
   .. automethod:: pad
   .. automethod:: plot_grid
   .. automethod:: plot_interactive
   .. automethod:: read
   .. automethod:: reduce
   .. automethod:: reduce_over_axes
   .. automethod:: resample
   .. automethod:: resample_axis
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: slice_by_idx
   .. automethod:: split_by_axis
   .. automethod:: sum_over_axes
   .. automethod:: to_cube
   .. automethod:: to_unit
   .. automethod:: upsample
   .. automethod:: write
